--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <path fill="none" stroke="#FFFFFF" stroke-width="7" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="56" stroke-dashoffset="56" d="M17.7,40.9l10.9,10.9l28.7-28.7"></path>
     </svg>
 
-    <div class="scan">Click and hold to scan your finger </div>
+    <div class="scan">Click and hold to scan your yyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyyfinger </div>
     <div class="scan"> እባኮን የእጅ አሻራውን በትክክል ማስቀመጦን ያረጋግጡ::</div>
     <div class="scan-success">You have given the fingerprint Successful</div>
     <div class="scan-success">የእጅ አሻራውን በትክክለ ሰርተዋል::</div>
